<resources>
    <string name="app_name">Bookopedia</string>
    <string name="you_are_not_a_member">You are not a member</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_id">Email Id</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="signout">Signout</string>
    <string name="faqs">FAQS</string>
    <string name="about_us">About us</string>
    <string name="open_drawer">Open-drawer3</string>
    <string name="close_drawer">Close-drawer3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">More</string>
    <string name="generes">Generes</string>
    <string name="title_of_the_book">Book Name</string>
    <string name="Book_author">Author name</string>
</resources>