<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/favourites"
        android:icon="@drawable/ic_favourites"
        android:title="@string/favourites" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/signout"
        android:icon="@drawable/ic_signout"
        android:title="@string/signout" />
    <item
        android:id="@+id/faqs"
        android:icon="@drawable/ic_faqs"
        android:title="@string/faqs" />
    <item
        android:id="@+id/aboutus"
        android:icon="@drawable/ic_about"
        android:title="@string/about_us" />
</menu>