<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginBackground"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/abhaya_libre"
        android:text="Hello There!"
        android:textColor="#1B1E23"
        android:textSize="45sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/inputfieldstyle1"
        android:hint="@string/email_id"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:textColorHint="#000000"
        android:textSize="20dp"
        tools:ignore="InvalidId,TextFields" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#000000">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inputfieldstyle1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:textColorHint="#000000"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="120dp"
        android:layout_height="53dp"
        android:layout_below="@id/passwordLayout"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/button"
        android:fontFamily="@font/abhaya_libre"
        android:padding="6dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/member"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/abhaya_libre"
        android:text="Forget Password?"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/member"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="65dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/abhaya_libre"
        android:text="@string/you_are_not_a_member"
        android:textColor="#1B1E23"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="30dp"
        android:layout_toRightOf="@id/member"
        android:fontFamily="@font/abhaya_libre"
        android:text="Register"
        android:textColor="#F4014F"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>