<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginBackground"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello There!"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="75dp"
        android:fontFamily="@font/abhaya_libre"
        android:textSize="45sp"
        android:textColor="#1B1E23"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/email_id"
        android:background="@drawable/inputfieldstyle1"
        android:textSize="20dp"
        tools:ignore="InvalidId,TextFields"
        android:textColorHint="#000000"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/password"
        android:background="@drawable/inputfieldstyle1"
        android:textSize="20sp"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="110dp"
        android:padding="6dp"
        android:textStyle="bold"
        android:text="@string/login"
        android:background="@drawable/button"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/abhaya_libre"/>

    <TextView
        android:id="@+id/member"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="65dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/abhaya_libre"
        android:padding="6dp"
        android:text="@string/you_r_not_a_member"
        android:textColor="#1B1E23"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="30dp"
        android:layout_toRightOf="@id/member"
        android:fontFamily="@font/abhaya_libre"
        android:padding="6dp"
        android:text="Register"
        android:textColor="#F4014F"
        android:textSize="23sp"
        android:textStyle="bold" />

</RelativeLayout>